進捗保存(上げなおし)

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=190,172
+Pos=730,0
 Size=550,665
+Collapsed=1
+
+[Window][color]
+Pos=-3,0
+Size=309,318
+Collapsed=0
+
+[Window][SRT]
+Pos=307,2
+Size=257,103
+Collapsed=0
+
+[Window][camera]
+Pos=-1,316
+Size=271,100
 Collapsed=0
 
