スプライト差し替え完了

--- a/imgui.ini
+++ b/imgui.ini
@@ -6,5 +6,10 @@ Collapsed=0
 [Window][Dear ImGui Demo]
 Pos=729,0
 Size=550,670
+Collapsed=1
+
+[Window][texture]
+Pos=728,20
+Size=137,54
 Collapsed=0
 
